@@ -73,6 +73,7 @@ EXPORTS
 	winx_str2time@4
 	winx_time2str@16
 	winx_xtime@0
+	winx_get_system_time@4
 	winx_list_insert_item@12
 	winx_list_remove_item@8
 	winx_list_destroy@4
