@@ -13,6 +13,7 @@ HISTORY
     - dry_run parameter added to GUI options as well as UD_DRY_RUN environment
       variable support added to the driver to be able to quickly test algorithms
       without actual data moves on disk
+    - Developers: winx_get_system_time function added to zenwinx library
     
     alpha2:
     - ability to resize list of volumes was added to graphical interface
